--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "typeorm-model-generator": "typeorm-model-generator -h localhost -d application -p 3306 -u root -x 123456 -e mysql -o temp/"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "^9.4.0",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/schedule": "^2.2.0",
-    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/schedule": "^2.2.1",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -38,7 +38,7 @@
     "jsencrypt": "^3.3.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.2.0",
+    "mysql2": "^3.2.4",
     "nest-winston": "^1.9.1",
     "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
@@ -57,31 +57,31 @@
     "@nestjs/testing": "^9.4.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
-    "@types/cron": "^2.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "29.2.4",
+    "@types/cron": "^2.0.1",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.16.1",
     "@types/node-rsa": "^1.1.1",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.11",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.3.1",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "29.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typeorm-model-generator": "^0.4.6",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
