--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
-    "typeorm": "^0.3.15",
+    "ua-parser-js": "^1.0.35",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
