--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "typeorm-model-generator": "typeorm-model-generator -h localhost -d application -p 3306 -u root -x 123456 -e mysql -o temp/"
   },
   "dependencies": {
-    "@nestjs/common": "^9.4.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.4.0",
-    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^9.0.3",
-    "@nestjs/platform-express": "^9.4.0",
-    "@nestjs/schedule": "^2.2.1",
-    "@nestjs/swagger": "^6.3.0",
-    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/schedule": "^3.0.1 ",
+    "@nestjs/swagger": "^7.1.8",
+    "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -38,8 +38,8 @@
     "jsencrypt": "^3.3.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.2.4",
-    "nest-winston": "^1.9.1",
+    "mysql2": "^3.6.0",
+    "nest-winston": "^1.9.3",
     "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -47,41 +47,42 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
+    "typeorm": "^0.3.17",
     "ua-parser-js": "^1.0.35",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.4.2",
-    "@nestjs/schematics": "^9.1.0",
-    "@nestjs/testing": "^9.4.0",
+    "@nestjs/cli": "^10.1.11",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
-    "@types/cron": "^2.0.1",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.3",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.16.1",
+    "@types/node": "^20.4.10",
     "@types/node-rsa": "^1.1.1",
-    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
-    "prettier": "^2.8.8",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.2",
+    "prettier": "^3.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.2",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typeorm-model-generator": "^0.4.6",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "jest": {
     "moduleFileExtensions": [
