--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/schedule": "^3.0.1 ",
     "@nestjs/swagger": "^7.1.8",
     "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
