--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.1.11",
     "@nestjs/schematics": "^10.0.2",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/testing": "^10.1.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
