--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typeorm-model-generator": "typeorm-model-generator -h localhost -d application -p 3306 -u root -x 123456 -e mysql -o temp/"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
@@ -42,6 +43,7 @@
     "mysql2": "^3.6.0",
     "nest-winston": "^1.9.3",
     "node-rsa": "^1.1.1",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -66,6 +68,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.10",
     "@types/node-rsa": "^1.1.1",
+    "@types/nodemailer": "^6.4.9",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
