--- a/package.json
+++ b/package.json
@@ -33,17 +33,21 @@
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "chatgpt": "5.2.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compressing": "^1.9.0",
     "cors": "^2.8.5",
+    "isomorphic-fetch": "^3.0.0",
     "jsencrypt": "^3.3.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "nest-winston": "^1.9.3",
+    "node-fetch": "^3.3.1",
     "node-rsa": "^1.1.1",
     "nodemailer": "^6.9.4",
+    "openai": "^3.3.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
