--- a/package.json
+++ b/package.json
@@ -20,79 +20,80 @@
     "typeorm-model-generator": "typeorm-model-generator -h localhost -d application -p 3306 -u root -x 123456 -e mysql -o temp/"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.9.1",
-    "@nestjs/common": "^10.1.3",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.3",
-    "@nestjs/jwt": "^10.1.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "^10.1.3",
-    "@nestjs/schedule": "^3.0.1 ",
-    "@nestjs/swagger": "^7.1.8",
-    "@nestjs/typeorm": "^10.0.0",
-    "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "^11.0.11",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/schedule": "^5.0.1",
+    "@nestjs/swagger": "^11.0.6",
+    "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.8.2",
+    "bcrypt": "^5.1.1",
     "chatgpt": "5.2.5",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "compressing": "^1.9.0",
+    "class-validator": "^0.14.1",
+    "compressing": "^1.10.1",
     "cors": "^2.8.5",
     "isomorphic-fetch": "^3.0.0",
     "jsencrypt": "^3.3.2",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.0",
-    "nest-winston": "^1.9.3",
+    "mysql2": "^3.13.0",
+    "nest-winston": "^1.10.2",
     "node-fetch": "^3.3.1",
     "node-rsa": "^1.1.1",
-    "nodemailer": "^6.9.4",
+    "nodemailer": "^6.10.0",
     "openai": "^3.3.0",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "svg-captcha": "^1.4.0",
-    "typeorm": "^0.3.20",
-    "ua-parser-js": "^1.0.35",
-    "uuid": "^9.0.0",
-    "winston": "^3.10.0"
+    "typeorm": "^0.3.21",
+    "ua-parser-js": "^2.0.2",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.11",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/serve-static": "^4.0.0",
-    "@nestjs/testing": "^10.1.3",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/cron": "^2.4.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.3",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.4.10",
-    "@types/node-rsa": "^1.1.1",
-    "@types/nodemailer": "^6.4.9",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
+    "@nestjs/cli": "^11.0.5",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/testing": "^11.0.11",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/cron": "^2.4.3",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.10",
+    "@types/node-rsa": "^1.1.4",
+    "@types/nodemailer": "^6.4.17",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.6.2",
-    "prettier": "^3.0.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typeorm-model-generator": "^0.4.6",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   },
   "jest": {
     "moduleFileExtensions": [
