--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "nest build",
     "start:dev": "cross-env NODE_ENV=development UPLOAD_PATH=$PWD/uploads nest start --watch",
-    "start:debug": "NODE_ENV=development start --debug --watch",
+    "start:debug": "cross-env NODE_ENV=development UPLOAD_PATH=$PWD/uploads nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix && prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
